--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container container-header">
         <nav class="navigation">
           <a href="./index.html" class="header-logo"
@@ -52,17 +53,17 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Banner -->
 
-      <section class="banner">
+      <!-- <section class="banner">
         <div class="container container-banner">
           <h1 class="banner-head">Effective Solutions for Your Business</h1>
           <button type="button" class="banner-button">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Principles -->
 
@@ -72,11 +73,11 @@
 
           <ul class="principles-list">
             <li class="principles-list-item">
-              <div class="prnc-icon-container">
+              <!-- <div class="prnc-icon-container">
                 <svg class="principles-list-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-Group"></use>
                 </svg>
-              </div>
+              </div> -->
               <h3 class="principles-list-item-head">Strategy</h3>
               <p class="principles-list-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -85,11 +86,11 @@
             </li>
 
             <li class="principles-list-item">
-              <div class="prnc-icon-container">
+              <!-- <div class="prnc-icon-container">
                 <svg class="principles-list-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
-              </div>
+              </div> -->
               <h3 class="principles-list-item-head">Punctuality</h3>
               <p class="principles-list-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -98,11 +99,11 @@
             </li>
 
             <li class="principles-list-item">
-              <div class="prnc-icon-container">
+              <!-- <div class="prnc-icon-container">
                 <svg class="principles-list-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
-              </div>
+              </div> -->
               <h3 class="principles-list-item-head">Diligence</h3>
               <p class="principles-list-item-text">
                 Research and confirm brands that present the strongest digital
@@ -111,11 +112,11 @@
             </li>
 
             <li class="principles-list-item">
-              <div class="prnc-icon-container">
+              <!-- <div class="prnc-icon-container">
                 <svg class="principles-list-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
-              </div>
+              </div> -->
               <h3 class="principles-list-item-head">Technologies</h3>
               <p class="principles-list-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -128,7 +129,7 @@
 
       <!-- Our Team -->
 
-      <section class="team">
+      <!-- <section class="team">
         <div class="container container-team">
           <h2 class="team-head">Our Team</h2>
 
@@ -315,11 +316,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Portfolio -->
 
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container container-portfolio">
           <h2 class="portfolio-head">Our Portfolio</h2>
 
@@ -457,12 +458,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Footer -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container container-footer">
         <div class="footer-logo-container">
           <a href="./index.html" class="footer-logo">
@@ -546,11 +547,11 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal window -->
 
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -638,6 +639,6 @@
           <button type="submit" class="footer-submit-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
