--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <title>Effective Solutions for Your Business</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -58,12 +59,12 @@
     <main>
       <!-- Banner -->
 
-      <!-- <section class="banner">
+      <section class="banner">
         <div class="container container-banner">
           <h1 class="banner-head">Effective Solutions for Your Business</h1>
           <button type="button" class="banner-button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Principles -->
 
@@ -73,11 +74,11 @@
 
           <ul class="principles-list">
             <li class="principles-list-item">
-              <!-- <div class="prnc-icon-container">
+              <div class="prnc-icon-container">
                 <svg class="principles-list-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-Group"></use>
                 </svg>
-              </div> -->
+              </div>
               <h3 class="principles-list-item-head">Strategy</h3>
               <p class="principles-list-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -86,11 +87,11 @@
             </li>
 
             <li class="principles-list-item">
-              <!-- <div class="prnc-icon-container">
+              <div class="prnc-icon-container">
                 <svg class="principles-list-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
-              </div> -->
+              </div>
               <h3 class="principles-list-item-head">Punctuality</h3>
               <p class="principles-list-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -99,11 +100,11 @@
             </li>
 
             <li class="principles-list-item">
-              <!-- <div class="prnc-icon-container">
+              <div class="prnc-icon-container">
                 <svg class="principles-list-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
-              </div> -->
+              </div>
               <h3 class="principles-list-item-head">Diligence</h3>
               <p class="principles-list-item-text">
                 Research and confirm brands that present the strongest digital
@@ -112,11 +113,11 @@
             </li>
 
             <li class="principles-list-item">
-              <!-- <div class="prnc-icon-container">
+              <div class="prnc-icon-container">
                 <svg class="principles-list-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
-              </div> -->
+              </div>
               <h3 class="principles-list-item-head">Technologies</h3>
               <p class="principles-list-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -129,7 +130,7 @@
 
       <!-- Our Team -->
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container container-team">
           <h2 class="team-head">Our Team</h2>
 
@@ -137,6 +138,7 @@
             <li class="team-list-item">
               <img
                 class="team-photo"
+                srcset="./images/Mark.jpg 1x, ./images/Mark-2x.jpg 2x"
                 src="./images/Mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -183,6 +185,7 @@
             <li class="team-list-item">
               <img
                 class="team-photo"
+                srcset="./images/Tom.jpg 1x, ./images/Tom-2x.jpg 2x"
                 src="./images/Tom.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -228,6 +231,7 @@
             <li class="team-list-item">
               <img
                 class="team-photo"
+                srcset="./images/Camila.jpg 1x, ./images/Camila-2x.jpg 2x"
                 src="./images/Camila.jpg"
                 alt="Camila Garteam-list-item-textcia"
                 width="264"
@@ -273,6 +277,7 @@
             <li class="team-list-item">
               <img
                 class="team-photo"
+                srcset="./images/Daniel.jpg 1x, ./images/Daniel-2x.jpg 2x"
                 src="./images/Daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -316,23 +321,45 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Portfolio -->
 
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container container-portfolio">
           <h2 class="portfolio-head">Our Portfolio</h2>
 
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <div class="portfolio-cover-wrap">
-                <img
-                  src="./images/banking-app.jpg"
-                  alt="banking-app"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/banking-app.jpg     1x,
+                      ./images/bank-desktop-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/bank-tab-1x.jpg 1x,
+                      ./images/bank-tab-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/bank-phone-1x.jpg 1x,
+                      ./images/bank-phone-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/banking-app.jpg"
+                    alt="banking-app"
+                    width="360"
+                  />
+                </picture>
 
                 <p class="portfolio-cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -458,7 +485,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- Footer -->
