--- a/index.html
+++ b/index.html
@@ -20,33 +20,42 @@
   </head>
 
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container container-header">
         <nav class="navigation">
           <a href="./index.html" class="header-logo"
             >Web<span class="studio">Studio</span></a
           >
           <ul class="navigation-list">
-            <li>
+            <li class="navigation-list-item">
               <a
                 href="./index.html"
                 class="navigation-link navigation-link-studio"
                 >Studio</a
               >
             </li>
-            <li><a href="" class="navigation-link">Portfolio</a></li>
-            <li><a href="" class="navigation-link">Contacts</a></li>
+            <li class="navigation-list-item">
+              <a href="" class="navigation-link">Portfolio</a>
+            </li>
+            <li class="navigation-list-item">
+              <a href="" class="navigation-link">Contacts</a>
+            </li>
           </ul>
+          <button type="button" class="header-menu-btn">
+            <svg class="header-menu-icon" width="18" height="16">
+              <use href="./images/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
         </nav>
 
         <address class="address-info">
           <ul class="contacts">
-            <li>
+            <li class="contacts-item">
               <a href="mailto:info@devstudio.com" class="contacts-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="contacts-item">
               <a href="tel:+110001111111" class="contacts-link"
                 >+11 (000) 111-11-11</a
               >
@@ -54,7 +63,83 @@
           </ul>
         </address>
       </div>
-    </header> -->
+
+      <div class="mobile-menu">
+        <div class="mob-menu-cont">
+          <button type="button" class="menu-close-btn">
+            <svg class="menu-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-cross"></use>
+            </svg>
+          </button>
+
+          <nav class="menu-navigation">
+            <ul class="menu-navigation-list">
+              <li class="menu-navigation-list-item">
+                <a
+                  href="./index.html"
+                  class="menu-navigation-link menu-navigation-link-studio"
+                  >Studio</a
+                >
+              </li>
+              <li class="menu-navigation-list-item">
+                <a href="" class="menu-navigation-link">Portfolio</a>
+              </li>
+              <li class="menu-navigation-list-item">
+                <a href="" class="menu-navigation-link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+
+          <address class="menu-address-info">
+            <ul class="menu-contacts">
+              <li class="menu-contacts-item">
+                <a href="mailto:info@devstudio.com" class="menu-contacts-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="menu-contacts-item">
+                <a
+                  href="tel:+110001111111"
+                  class="menu-contacts-link menu-contacts-phone"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <ul class="menu-social-list">
+          <li class="menu-social-list-item">
+            <a class="menu-social-list-link" href="" target="_blank">
+              <svg class="menu-list-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-social-list-item">
+            <a class="menu-social-list-link" href="" target="_blank">
+              <svg class="menu-list-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-social-list-item">
+            <a class="menu-social-list-link" href="" target="_blank">
+              <svg class="menu-list-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-social-list-item">
+            <a class="menu-social-list-link" href="" target="_blank">
+              <svg class="menu-list-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
 
     <main>
       <!-- Banner -->
@@ -336,7 +421,7 @@
                   <source
                     media="(min-width: 1158px)"
                     srcset="
-                      ./images/banking-app.jpg     1x,
+                      ./images/bank-desktop-1x.jpg 1x,
                       ./images/bank-desktop-2x.jpg 2x
                     "
                   />
@@ -355,7 +440,7 @@
                     "
                   />
                   <img
-                    src="./images/banking-app.jpg"
+                    src="./images/bank-desktop-1x.jpg"
                     alt="banking-app"
                     width="360"
                   />
@@ -376,12 +461,34 @@
 
             <li class="portfolio-list-item">
               <div class="portfolio-cover-wrap">
-                <img
-                  src="./images/cashless-payment.jpg"
-                  alt="cashless-payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/cashless-desktop-1x.jpg 1x,
+                      ./images/cashless-desktop-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/cashless-tab-1x.jpg 1x,
+                      ./images/cashless-tab-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/cashless-phone-1x.jpg 1x,
+                      ./images/cashless-phone-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/cashless-desktop-1x.jpg"
+                    alt="cashless-payment"
+                    width="360"
+                  />
+                </picture>
 
                 <p class="portfolio-cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -398,12 +505,34 @@
 
             <li class="portfolio-list-item">
               <div class="portfolio-cover-wrap">
-                <img
-                  src="./images/meditation-app.jpg"
-                  alt="meditation-app"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/meditation-desktop-1x.jpg 1x,
+                      ./images/meditation-desktop-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/meditation-tab-1x.jpg 1x,
+                      ./images/meditation-tab-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/meditation-phone-1x.jpg 1x,
+                      ./images/meditation-phone-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/meditation-desktop-1x.jpg"
+                    alt="meditation-app"
+                    width="360"
+                  />
+                </picture>
 
                 <p class="portfolio-cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -420,12 +549,34 @@
 
             <li class="portfolio-list-item">
               <div class="portfolio-cover-wrap">
-                <img
-                  src="./images/taxi-service.jpg"
-                  alt="taxi-service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/taxi-desktop-1x.jpg 1x,
+                      ./images/taxi-desktop-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/taxi-tab-1x.jpg 1x,
+                      ./images/taxi-tab-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/taxi-phone-1x.jpg 1x,
+                      ./images/taxi-phone-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/taxi-desktop-1x.jpg"
+                    alt="taxi-service"
+                    width="360"
+                  />
+                </picture>
 
                 <p class="portfolio-cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -442,12 +593,31 @@
 
             <li class="portfolio-list-item">
               <div class="portfolio-cover-wrap">
-                <img
-                  src="./images/screen-illustrations.jpg"
-                  alt="screen-illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/screen-desktop-1x.jpg 1x,
+                      ./images/screen-desktop-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/screen-tab-1x.jpg 1x,
+                      ./images/screen-tab-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="./images/screen-phone-2x.jpg 2x"
+                  />
+                  <img
+                    src="./images/screen-desktop-1x.jpg"
+                    alt="screen-illustrations"
+                    width="360"
+                  />
+                </picture>
 
                 <p class="portfolio-cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -464,12 +634,34 @@
 
             <li class="portfolio-list-item">
               <div class="portfolio-cover-wrap">
-                <img
-                  src="./images/online-courses.jpg"
-                  alt="online-courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/online-desktop-1x.jpg 1x,
+                      ./images/online-desktop-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/online-tab-1x.jpg 1x,
+                      ./images/online-tab-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/online-phone-1x.jpg 1x,
+                      ./images/online-phone-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/online-desktop-1x.jpg"
+                    alt="online-courses"
+                    width="360"
+                  />
+                </picture>
 
                 <p class="portfolio-cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -490,95 +682,97 @@
 
     <!-- Footer -->
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container container-footer">
-        <div class="footer-logo-container">
-          <a href="./index.html" class="footer-logo">
-            Web<span class="studio">Studio</span>
-          </a>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <div class="footer-info-container">
+          <div class="footer-logo-container">
+            <a href="./index.html" class="footer-logo">
+              Web<span class="studio">Studio</span>
+            </a>
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
 
-        <div class="footer-social-container">
-          <p class="footer-social-head">Social media</p>
+          <div class="footer-social-container">
+            <p class="footer-social-head">Social media</p>
 
-          <ul class="social-list footer-social-list">
-            <li class="social-list-item">
-              <a
-                class="social-list-link social-list-link-footer"
-                href=""
-                target="_blank"
-              >
-                <svg class="team-list-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list-item">
-              <a
-                class="social-list-link social-list-link-footer"
-                href=""
-                target="_blank"
-              >
-                <svg class="team-list-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list-item">
-              <a
-                class="social-list-link social-list-link-footer"
-                href=""
-                target="_blank"
-              >
-                <svg class="team-list-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list-item">
-              <a
-                class="social-list-link social-list-link-footer"
-                href=""
-                target="_blank"
-              >
-                <svg class="team-list-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+            <ul class="social-list footer-social-list">
+              <li class="social-list-item">
+                <a
+                  class="social-list-link social-list-link-footer"
+                  href=""
+                  target="_blank"
+                >
+                  <svg class="team-list-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a
+                  class="social-list-link social-list-link-footer"
+                  href=""
+                  target="_blank"
+                >
+                  <svg class="team-list-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a
+                  class="social-list-link social-list-link-footer"
+                  href=""
+                  target="_blank"
+                >
+                  <svg class="team-list-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a
+                  class="social-list-link social-list-link-footer"
+                  href=""
+                  target="_blank"
+                >
+                  <svg class="team-list-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
 
-        <div class="footer-form-container">
-          <p class="footer-form-head">Subscribe</p>
-          <form class="footer-form">
-            <label class="footer-label">
-              <input
-                class="email-input"
-                type="email"
-                name="footer-email"
-                placeholder="E-mail"
-              />
-            </label>
+          <div class="footer-form-container">
+            <p class="footer-form-head">Subscribe</p>
+            <form class="footer-form">
+              <label class="footer-label">
+                <input
+                  class="email-input"
+                  type="email"
+                  name="footer-email"
+                  placeholder="E-mail"
+                />
+              </label>
 
-            <button type="submit" class="subscribe-btn">
-              Subscribe
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </button>
-          </form>
+              <button type="submit" class="subscribe-btn">
+                Subscribe
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Modal window -->
 
-    <!-- <div class="backdrop">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -658,14 +852,16 @@
                   <use href="./images/icons.svg#icon-checkmark"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a href="" class="privacy-link">Privacy Policy</a></label
-            >
+              <span class="modal-accept-txt">
+                I accept the terms and conditions of the
+                <a href="" class="privacy-link">Privacy Policy</a>
+              </span>
+            </label>
           </div>
 
           <button type="submit" class="footer-submit-btn">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
